全球団の応援歌を追加・大半を完成

--- a/pdfmr/static/templates2/buffaloes.html
+++ b/pdfmr/static/templates2/buffaloes.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>オリックスバファローズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,179 +50,127 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="buf">オリックスバファローズ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
-</tr>
-<tr>
-	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
+	<th class="p_num">00</th>
+	<th class="p_name">西浦颯大</th>
+	<td>風斬り裂くユニフォーム MAX全開フル加速 豪脚足攻ブッチギリ 光速DASHの速男</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
-	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
+	<th class="p_name">白崎浩之</th>
 	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
+		【前奏：白崎! 白崎! 白崎! Wow!】<br>
+		烈しく叩けストレート 巧く捌け変化球 如何なる球も的確に 仕留めてみせろ一振りで
+<br>
 	</td>
 </tr>
 <tr>
+	<th class="p_num">3</th>
+	<th class="p_name">安達了一</th>
+	<td>【A】猛れ雄々しく行け 本能の侭に 気魄出してここで今見せろ 力振り絞れ<br>
+		【ブリッジ】我武者羅に喰らいつけ<br>
+		【B】上州男が張っ飛ばす! 了一! 了一! 張っ飛ばせー!</td>
+</tr>
+<tr>
 	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
+	<th class="p_name">福田周平</th>
+	<td>
+		【前奏：機先を制するため ここで口火を鑽れ】<br>
+		勇み立てよ 覚悟を決めた心で 雄渾と戦う様は 勝鬨誘う
 	</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">西野真弘</th>
+	<td>【1】動きまわる元気 誰にも負けない 明日へと続く道を拓け 前だけ見て<br>
+		【2】怯まぬ精神 失わぬ気力 頑なに 貫き通せ<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">6</th>
+	<th class="p_name">宗佑磨</th>
+	<td>胸の奥で熱く滾る 想い全て出し切れ 壮絶な争いに 勝ち残れ最後まで</td>
 </tr>
 <tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_name">後藤駿太</th>
+	<td>【前奏：行け! 走れ! Go! 駿太】<br>
+		容赦なく切り貫け 迫る敵を薙ぎ払え 上野の駿馬よ 走り続けろ</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">大城滉二</th>
+	<td>【前奏：君よ輝けとただ願う この想い いつまでも この詩に乗せて】<br>
+		逞しく咲き誇る サンタンカの花の様に 強く熱く気概を以ち 行けよ 凜々しき強者</td>
 </tr>
 <tr>
-	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_num">34</th>
+	<th class="p_name">吉田正尚</th>
+	<td>(A)力を求める限り 幾多の困難乗り越え 前人未到の境地 辿り着く男の名は<br>
+		(B)オイ! オイ! オイ! オイ! オイ! それ正尚! オー オイ! それかっ飛ばせ<br>
+		【境地Ver】<br>
+		(イントロ)オー… 正尚!<br>
+		(A)オイ! オイ!… 吉田!<br>
+		(サビ)その力 ここで 魅せろ! 魅せろ!　全身全霊 懸けろ! 懸けろ!
+	</td>
 </tr>
 <tr>
-	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_num">37</th>
+	<th class="p_name">若月健矢</th>
+	<td>【A】健矢 揺るぎなき決意 底知れぬ覇気が力と成る 果てなき その念いが 笑顔の輪をつくる<br>
+		【B】捕み取れ その努力で</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
-</tr>
-<tr>
-	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
-</tr>
-<tr>
-	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
-</tr>
-<tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
-</tr>
-<tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_num">38</th>
+	<th class="p_name">小島脩平</th>
+	<td>心磨き技を鍛え 凌ぎを交わした その努力糧にして 気高く咲きゆけ</td>
 </tr>
 <tr>
 	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_name">頓宮裕真</th>
+	<td>行くぞユーマー ホームラン Vを目指して それ行けユーマー</td>
 </tr>
 <tr>
-	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_num">50</th>
+	<th class="p_name">小田裕也</th>
+	<td>類い稀なる脚で フィールド走り抜け 奪い取れ さぁ行け 疾風になれ</td>
 </tr>
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">55</th>
+	<th class="p_name">T-岡田</th>
+	<td>T! HOMERUN KING T! T! T.rex 遠く 遠く 派手に飛ばせ ナニワの轟砲<br>
+		【チャンスVer】<br>
+		T! HOMERUN KING T! T! T.rex ここで決める男 このチャンスをものにしろ 遠く 遠く 派手に飛ばせ ナニワの轟砲
+	</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_num">62</th>
+	<th class="p_name">杉本裕太郎
+	</th>
+	<td>混沌する戦場で 狼煙を上げる 目の覚める弾道 敵を怯ませる</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_name">メインテーマ</th>
+	<td>ぶつけろ熱意 無限の可能性 流した汗力に変える 志天高く</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<th class="p_name">外国人汎用</th>
+	<td>野望抱き海を越え この地で名を馳せろ 新たな伝説を ここに刻め</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<th class="p_name">代打</th>
+	<td>【1】ウグイスコールに颯爽と 素振り二回足固め ここが腕の見せどころ 輝く時が来た<br>
+		【2】鏡の前で汗をかき 与えられたこの打席 女房子供を食わすため 必ず仕事する</td>
 </tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
-</tr>
+
 </table>
 
 </section>
