--- a/pdfmr/static/templates2/contact.html
+++ b/pdfmr/static/templates2/contact.html
@@ -3,52 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>クールイメージビジネスサイトサイト向け 無料ホームページテンプレート tp_cool7</title>
+<title>リンク</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
-<link rel="stylesheet" href="{% static 'templates2/css/style.css' %}">
-<link rel="stylesheet" href="{% static 'templates2/css/slide.css' %}">
-<script type="text/javascript" src="{% static 'templates2/js/openclose.js' %}"></script>
-<script type="text/javascript" src="{% static 'templates2/js/fixmenu_pagetop.js' %}"></script>
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/slide.css">
+<script type="text/javascript" src="js/openclose.js"></script>
+<script type="text/javascript" src="js/fixmenu_pagetop.js"></script>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 </head>
 
-<body class="s-n">
+<body>
 
 <header>
-<div class="inner">
-<h1 id="logo"><a href="index.html"><img src="{% static 'templates2/images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
-<div id="contact">
-<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>
-</div>
-</div>
+	<div class="inner">
+	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
+	<div id="contact">
+	<!--<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>-->
+	</div>
+	</div>
 </header>
 
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
-<ul class="inner">
-<li><a href="index.html">ホーム<span>HOME</span></a></li>
-<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li class="current"><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-</ul>
-</nav>
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s">
-<ul>
-<li><a href="index.html">ホーム<span>HOME</span></a></li>
-<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-</ul>
+	<ul class="inner">
+		<li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
+		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
+		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+		</ul>
+		</nav>
+		<!--小さな端末用（800px以下端末）メニュー-->
+		<nav id="menubar-s" style="display: none;">
+		<ul>
+		<li><a href="index.html">ホーム<span>HOME</span></a></li>
+		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
+		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+		</ul>
 </nav>
 
 <div id="contents" class="inner">
@@ -58,33 +58,26 @@
 
 <section>
 
-<h2>お問い合わせ</h2>
-<p>当ページと同じ３項目のお問い合わせフォーム（自動フォーム試用版）を簡単に使えるようにセットしています。<br>
-<span style="color: red;">※当ページ（contact.html）はフォームの見本ページです。実際の自動フォームには使いませんのでご注意下さい。</span></p>
-<p><strong class="color1">■自動フォームを使う場合（※編集に入る前にご確認下さい）</strong><br>
-あなたのメールアドレス設定と、簡単な編集だけで使えます。<a href="http://template-party.com/file/formgen_manual_set2.html" target="_blank">こちらのマニュアルをご覧下さい。</a></p>
-<p><strong class="color1">■自動フォームを使わない場合</strong><br>
-テンプレートに梱包されている「form.html」「confirm.html」「finish.html」の3枚のファイルを削除して下さい。</p>
+<h2>当サイトについて</h2>
+<p>プロ野球全球団の応援歌をまとめたサイトです。</p>
 
-<table class="ta1">
-<tr>
-<th>お名前※</th>
-<td><input type="text" name="お名前" size="30" class="ws"></td>
-</tr>
-<tr>
-<th>メールアドレス※</th>
-<td><input type="text" name="メールアドレス" size="30" class="ws"></td>
-</tr>
-<tr>
-<th>お問い合わせ詳細※</th>
-<td><textarea name="お問い合わせ詳細" cols="30" rows="10" class="wl"></textarea></td>
-</tr>
-</table>
-
-<p class="c">
-<input type="submit" value="内容を確認する" class="btn">
+<h2>応援歌について</h2>
+<p>
+	応援歌の権利一切は各応援団様、球団様、各制作者様に帰属致します。<br>
+	当サイトはあくまで参照・引用の上、見やすくご紹介させて頂いています。<br>
 </p>
 
+<h2>歌詞の表記について</h2>
+<p>
+	歌詞の表記に関しては、基本的に引用先の通りに表記していますが、わかりやすくするため次のように一部表記を変更している箇所がございます。<br>
+
+</p>
+
+<h2>プライバシーポリシー</h2>
+<p>coming soon...</p>
+
+<h2>お問い合わせ</h2>
+<p>coming soon...</p>
 </section>
 
 </div>
@@ -93,65 +86,36 @@
 <div id="sub">
 
 <nav>
-<h2>Contents</h2>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-</nav>
-
-<nav>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
+	<h2>セ・リーグ</h2>
+	<ul class="submenu">
+		<li><a href="giants.html">巨人</a></li>
+		<li><a href="baystars.html">DeNA</a></li>
+		<li><a href="tigers.html">阪神</a></li>
+		<li><a href="carp.html">広島</a></li>
+		<li><a href="dragons.html">中日</a></li>
+		<li><a href="swallows.html">ヤクルト</a></li>
+	</ul>
+	</nav>
+	
+	<nav>
+	<h2>パ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="lions.html">西武</a></li>
+	<li><a href="hawks.html">ソフトバンク</a></li>
+	<li><a href="eagles.html">楽天</a></li>
+	<li><a href="marines.html">ロッテ</a></li>
+	<li><a href="fighters.html">日本ハム</a></li>
+	<li><a href="buffaloes.html">オリックス</a></li>
+	</ul>
 </nav>
 
 <section>
 
-<h2>製品情報</h2>
 
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル<span class="newicon">NEW</span></h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
 
 </section>
 
-<div class="box1">
-<h2>アクセス</h2>
-<p>東京都XX区XXXXビル３F<br>
-TEL：03-0000-0000<br>
-受付：9:00～16:00<br>
-定休日：土日祝</p>
-</div>
 
-</div>
 <!--/#sub-->
 
 </div>
@@ -161,51 +125,11 @@ TEL：03-0000-0000<br>
 
 <section>
 
-<h2>製品情報</h2>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル<span class="newicon">NEW</span></h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
 
 </section>
 
 <nav>
+<!--
 <h2>Contents</h2>
 <ul class="submenu">
 <li><a href="#">メニューサンプル</a></li>
@@ -214,14 +138,10 @@ TEL：03-0000-0000<br>
 <li><a href="#">メニューサンプル</a></li>
 <li><a href="#">メニューサンプル</a></li>
 </ul>
+
+-->
 </nav>
 
-<p>
-<a href="recruit.html"><img src="{% static 'templates2/images/banner1.jpg' %}" alt="採用情報" class="pc"></a>
-<a href="recruit.html"><img src="{% static 'templates2/images/banner1_sh.jpg' %}" alt="採用情報" class="sh"></a>
-</p>
-<p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
-<a href="company.html#banner">詳しい説明はこちら。</a></p>
 
 </div>
 <!--/#side-->
@@ -230,7 +150,7 @@ TEL：03-0000-0000<br>
 <!--/#contents-->
 
 <footer>
-
+<!--
 <div id="footermenu" class="inner">
 <ul>
 <li><a href="#">メニューサンプル</a></li>
@@ -273,10 +193,11 @@ TEL：03-0000-0000<br>
 <li><a href="#">メニューサンプル</a></li>
 </ul>
 </div>
+-->
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright&copy; <a href="index.html">SAMPLE COMPANY</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
