--- a/pdfmr/static/templates2/eagles.html
+++ b/pdfmr/static/templates2/eagles.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>東北楽天ゴールデンイーグルス</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,178 +50,116 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="eag">東北楽天ゴールデンイーグルス　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
-</tr>
-<tr>
-	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
-</tr>
-<tr>
-	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
 	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
-	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
-	</td>
+	<th class="p_name">浅村栄斗</th>
+	<td>【前奏：スタンドへ叩き込め 浅村】<br>
+		燃え上がれ ここで燃え上がれ 浅村打て 浅村打て 叩き込め</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
+	<th class="p_name">桑原将志</th>
+	<td>
+		オオーオオー レッツゴーオコエ<br>
+		オオーオオオオ レッツゴーオコエ(ルイルイ!)<br>
+		オオーオオー レッツゴーオコエ<br>
+		打てオコエ瑠偉<br>
 	</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">茂木英五郎</th>
+	<td>茂木栄五郎 茂木栄五郎 勝利に向かってフルスイング</td>
 </tr>
 <tr>
-	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_num">6</th>
+	<th class="p_name">藤田一也</th>
+	<td>
+		勝利を信じて ひたむきに進め 終わり無き道を今 駆け抜けろ藤田
+	</td>
 </tr>
 <tr>
-	<th class="p_num">9</th>
+	<th class="p_num">7</th>
+	<th class="p_name">鈴木大地</th>
+	<td>大地 勝利のために 熱い気持ち込めて東北の夢を 背負い戦うヒーロー<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">25</th>
+	<th class="p_name">田中和基</th>
+	<td>GO! GO! 和基 GO! GO! 和基 和基 田中和基 GO! GO! 和基</td>
+</tr>
+<tr>
+	<th class="p_num">26</th>
+	<th class="p_name">渡辺直人</th>
+	<td>進め! 真っ直ぐに 栄光に向かって 風を切り裂いて走れ 我らの直人</td>
+</tr>
+<tr>
+	<th class="p_num">27</th>
 	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
-</tr>
-<tr>
-	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
-</tr>
-<tr>
-	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
-</tr>
-<tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
-</tr>
-<tr>
-	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<td>チャンスを掴め目指せ勝利 岡島豪郎 俊足・巧打・守り抜け 魂込めて<br>
+		オオオオオ オオオオオ オオオオオオオ オイ!</td>
 </tr>
 <tr>
 	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
+	<th class="p_name">銀次</th>
+	<td>夢乗せて 放て鋭い一打 打て! 銀次! 勝利のために</td>
 </tr>
 <tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
+	<th class="p_num">35</th>
+	<th class="p_name">島内宏明</th>
+	<td>ここで島内 勝利の一打 オオオ… オオオ…</td>
 </tr>
 <tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_num">40</th>
+	<th class="p_name">ウィーラー</th>
+	<td>溢れるパワー 見せつけろ闘志 戦うのさ いざ逞しく ぶっ飛ばせさぁ ウィーラー</td>
 </tr>
 <tr>
 	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_name">足立祐一</th>
+	<td>その力と技で ボールを弾き返せ 足立祐一 遠くへ飛ばせ</td>
 </tr>
 <tr>
-	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_num">69</th>
+	<th class="p_name">ブラッシュ</th>
+	<td>みんなが待ってるホームラン(JB!)<br>
+		みんなが待ってるホームラン(JB!)<br>
+		弾丸ライナー飛んでゆけ(JB!)<br>
+		はるか遠く</td>
 </tr>
+
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
-</tr>
-<tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num"></th>
+	<th class="p_name">汎用テーマ</th>
+	<td>ここで一発 かっ飛ばせ! 打てよ○○
+	</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_name">汎用テーマ2</th>
+	<td>迷わずいざ進め 若鷲よ飛べ 巻き起こせ 新たな風を</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_name">共通テーマ</th>
+	<td>レッツゴー! レッツゴー! レッツゴー○○</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+	<th class="p_name">外国人汎用</th>
+	<td>【英語Ver】<br>
+		レッツゴー レッツゴー ホームラン ○○ オオオオオオオ<br>
+		レッツゴー レッツゴー ホームラン ○○ オオオオオオオ<br>
+		【スペイン語Ver】<br>
+		バモス バモス アニモ ○○ オオオオオオオ<br>
+		バモス バモス アニモ ○○ オオオオオオオ
+	</td>
 </tr>
 </table>
 
