--- a/pdfmr/static/templates2/fighters.html
+++ b/pdfmr/static/templates2/fighters.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>北海道日本ハムファイターズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,178 +50,112 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="fig">北海道日本ハムファイターズ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
+	<th class="p_num">2</th>
+	<th class="p_name">杉谷拳士</th>
 	<td>授かりしその力で　描いた景色は
 		横浜で輝く　おのれの勇姿</td>
 </tr>
 <tr>
-	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
-</tr>
-<tr>
-	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
 	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
+	<th class="p_name">王柏融</th>
 	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
+		【前奏：最強王! 金牌王! オイ! オイ! 柏融大王! オイ! オイ! 最強王! 金牌王! 最強金牌 柏融大王!】<br>
+		磨き上げてきた 力と技術で 強敵を打ち崩す 全壘打 柏融<br>
 	</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
-	</td>
+	<th class="p_name">谷口雄也</th>
+	<td>尽き果てぬ想い 一振りに託し 止めどなく闘う男 谷口雄也</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">大田泰示</th>
+	<td>
+		滾る想い胸に 全てぶつけろ 魅せろこの場所で 夢の続きを
+	</td>
+</tr>
+<tr>
+	<th class="p_num">6</th>
+	<th class="p_name">中田翔</th>
+	<td>勝負決める一振り 血と汗の勲章 その手で夢掴め さぁ翔け中田<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">7</th>
+	<th class="p_name">西川遥輝</th>
+	<td>今だ西川 遥かに続いた道を 走れ西川 輝くその日まで</td>
 </tr>
 <tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_name">近藤健介</th>
+	<td>さぁ狙いを定め 遠く遠く飛ばせ 眩く光る時代 近藤 築き上げろ</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">中島卓也</th>
+	<td>踏み出した姿に 最高の期待込めて 今、頂目指し進め 挑み勝て中島</td>
 </tr>
 <tr>
 	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_name">清水優心</th>
+	<td>燃え盛れ清水 いざ打ち勝て 冴え渡るリード 未来へ導け</td>
+</tr>
+<tr>
+	<th class="p_num">12</th>
+	<th class="p_name">松本剛</th>
+	<td>剛の熱情は 鉄さえ溶かす 今開く歴史 進め光目指して</td>
+</tr>
+<tr>
+	<th class="p_num">21</th>
+	<th class="p_name">清宮幸太郎</th>
+	<td>描き出す 理想は久遠高く 鍛えし腕で 清宮打て</td>
+</tr>
+<tr>
+	<th class="p_num">22</th>
+	<th class="p_name">鶴岡慎也</th>
+	<td>攻守に輝き放つ 今日も星を掴み取れ 鶴岡慎也</td>
 </tr>
 <tr>
 	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_name">渡邉諒</th>
+	<td>夢の欠片 信じた証が今 手を伸ばして さぁ掴め 輝く未来</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_num">26</th>
+	<th class="p_name">淺間大基</th>
+	<td>シャープに決めるバッティング 風斬るスピードと 敵を仕留める強肩で 勝ちへと繋げ</td>
 </tr>
 <tr>
-	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<th class="p_num">38</th>
+	<th class="p_name">石井一成</th>
+	<td>鋭いスイングで 敵を倒せ いまだ見ぬ境地 一成突っ走れ</td>
 </tr>
 <tr>
-	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
-</tr>
-<tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
-</tr>
-<tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
-</tr>
-<tr>
-	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
-</tr>
-<tr>
-	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
-</tr>
-<tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
-</tr>
-<tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">58</th>
+	<th class="p_name">横尾俊建</th>
+	<td>フルスイングで 吹き込む勝利の風 放つ打球はスタンドへ 届くホームラン</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_name">投手用テーマ</th>
+	<td>我らの期待を 右(左)腕に懸けて 今魅せろ○○ 全力で行け</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_name">メインテーマ1</th>
+	<td>勝利を誘う 晴れ舞台 みなぎる闘志を ぶつけろ○○</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+	<th class="p_name">メインテーマ2</th>
+	<td>行けそれ行け 打てそれ打て 走れここで輝け Let's Go FIGHTERS</td>
 </tr>
 </table>
 
