--- a/pdfmr/static/templates2/hawks.html
+++ b/pdfmr/static/templates2/hawks.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>福岡ソフトバンクホークス</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,178 +50,174 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="haw">福岡ソフトバンクホークス　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
+	<th class="p_num">00</th>
+	<th class="p_name">川瀬晃</th>
+	<td>風の如く駆け抜け グラブ捌き魅せるぜ 快音を響かせ バットも魅せるぜ</td>
+</tr>
+<tr>
 	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
+	<th class="p_name">高田知季</th>
+	<td>今だ目の覚める一打を スタンドにぶち込め 振り抜いた打球は 空に突き刺さる</td>
 </tr>
 <tr>
 	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
-</tr>
-<tr>
-	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
-	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
-	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
-	</td>
+	<th class="p_name">内川聖一</th>
+	<td>右に左に捌け コースを絞って 狙い澄まし 内川打て</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
-	</td>
+	<th class="p_name">川島慶三</th>
+	<td>逞しく いざ立ち上がれ 思い切り振り 打て川島</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">松田宣浩</th>
+	<td>沸き立つスタンドの 期待に応えて燃えてやれ 振りぬくその腕に 闘志を注ぎ込め<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">6</th>
+	<th class="p_name">今宮健太</th>
+	<td>生まれ持つセンス 風を切り走れ 空高く飛ばせ 柔らかなリストで</td>
+</tr>
+<tr>
+	<th class="p_num">7</th>
+	<th class="p_name">中村晃</th>
+	<td>新たな扉を 今から開け 愛する男さ 中村晃</td>
 </tr>
 <tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_name">明石健志</th>
+	<td>ドームに響く 声を受けて 今だ明石 振り抜け</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">柳田悠岐</th>
+	<td>光のような足と 突き刺すようなスロー いざ一振り決めて 輝け柳田</td>
 </tr>
 <tr>
-	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_num">12</th>
+	<th class="p_name">髙谷裕亮</th>
+	<td>敵を打ち砕け 魅せろ男の心意気</td>
+</tr>
+<tr>
+	<th class="p_num">19</th>
+	<th class="p_name">甲斐拓也</th>
+	<td>巡ったチャンスを その手で掴みとれ 拓也今ここで 見せてやれ</td>
+</tr>
+<tr>
+	<th class="p_num">22</th>
+	<th class="p_name">西田哲朗</th>
+	<td>巧みな守備走塁 未知のパワー秘め 西田哲朗が 旋風を巻き起こす</td>
 </tr>
 <tr>
 	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_name">周東佑京</th>
+	<td>たゆまぬ努力で さぁ時代を築け 志ひとつに 行けスピードソルジャー</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_num">24</th>
+	<th class="p_name">長谷川勇也</th>
+	<td>走れ長谷川 打てよ長谷川 遥か思いで栄光奪え
+	</td>
+</tr>
+<tr>
+	<th class="p_num">27</th>
+	<th class="p_name">グラシアル</th>
+	<td>試合決める一打 高く遠く飛ばせ 空の彼方描くアーチ 放てグラシアル</td>
 </tr>
 <tr>
 	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<th class="p_name">栗原陵矢</th>
+	<td>溢れる闘志を さあ見せてやれ 鮮烈な打球を 打ち飛ばせ</td>
 </tr>
 <tr>
 	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
+	<th class="p_name">増田珠</th>
+	<td>熱く燃える姿 見せろよ男の 意地とプライドをかけて フィールドで羽ばたけ</td>
 </tr>
 <tr>
 	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
+	<th class="p_name">牧原大成</th>
+	<td>みなぎるそのエナジー 轟け地の果てまで 縦横無尽に駆け抜け 男になれ</td>
 </tr>
 <tr>
 	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
+	<th class="p_name">堀内汰門</th>
+	<td>狙いを定めて バットを振り抜き 勝負を勝ち取り それ行けよ堀内</td>
 </tr>
 <tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_num">45</th>
+	<th class="p_name">谷川原健太</th>
+	<td>強く振り抜け そのバットで 遥か彼方の空へ 飛ばせ健太</td>
 </tr>
 <tr>
-	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_num">46</th>
+	<th class="p_name">コラス</th>
+	<td>相手が黙る打球 飛ばせよコラス スタンド超え大空に 舞い上がれホームラン</td>
 </tr>
 <tr>
 	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_name">上林誠知</th>
+	<td>叩けボールをミートで 広く打ち分け遠くへ スピード生かして 目指せホームベースを</td>
 </tr>
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">54</th>
+	<th class="p_name">デスパイネ</th>
+	<td>果てしない弾道 空へ放ち 敵砕け勝利呼べ デスパイネ</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">55</th>
+	<th class="p_name">野村大樹</th>
+	<td>腕突き上げボールを 飛ばせ我らの大砲 その不屈の精神 野村大樹よ輝け
+	</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_num">59</th>
+	<th class="p_name">水谷瞬</th>
+	<td>風を切り裂く 快速飛ばせ 今ここで水谷 光り瞬け</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_num">60</th>
+	<th class="p_name">釜元豪</th>
+	<td>GO! 駆けろその足で GO! 投げろその肩で 豪 バットで 決めろ今宵の勝利</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<th class="p_num">64</th>
+	<th class="p_name">真砂勇介</th>
+	<td>夜空に羽ばたいた 未来の三冠王 高く遠く空に輝く星になれ</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<th class="p_num">65</th>
+	<th class="p_name">九鬼隆平</th>
+	<td>夢と希望をその胸に 未知のパワーで突き進め 強く振り抜け九鬼龍平 空に羽ばたけ</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
+	<th class="p_num">68</th>
+	<th class="p_name">三森大貴</th>
+	<td>今だ一振り強いスイング 狙い定めて打ち ホームベース目指して 三森よ駆け抜けろ</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
+	<th class="p_num">124</th>
+	<th class="p_name">古澤勝吾</th>
+	<td>古澤叩け その球を 熱い心で 星を掴め
+	</td>
+</tr>
+<tr>
+	<th class="p_num">126</th>
+	<th class="p_name">黒瀬健太</th>
+	<td>ここで勝負を決めるぜ 類まれなパワーを 見せろ黒瀬の一撃 空へ突き刺すアーチを</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+	<th class="p_name">育成野手汎用</th>
+	<td>今舞台が出来たぞ お前が輝く 最高の瞬間 羽ばたけ</td>
 </tr>
 </table>
 
