--- a/pdfmr/static/templates2/link.html
+++ b/pdfmr/static/templates2/link.html
@@ -35,8 +35,8 @@
 		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-		<li><a href="link.html">リンク<span>STAFF</span></a></li>
-		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
 		</ul>
 		</nav>
 		<!--小さな端末用（800px以下端末）メニュー-->
@@ -46,8 +46,8 @@
 		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
-		<li><a href="link.html">リンク<span>STAFF</span></a></li>
-		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
 		</ul>
 </nav>
 
@@ -62,7 +62,7 @@
 <p>リンクのご案内。</p>
 
 <table class="ta1">
-<caption>応援団サイト</caption>
+<caption>球団・応援団サイト</caption>
 <tr>
 <th><a href="https://chunichiouendan.wixsite.com/dragonsouendan">中日ドラゴンズ応援団</a></th>
 <td>中日ドラゴンズ応援団のホームページです。</td>
@@ -84,16 +84,32 @@
 <td>阪神タイガース応援団のホームページです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="https://www.giants.jp/top.html">読売巨人軍</a></th>
+<td>読売巨人軍の公式サイトです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="https://www.fighters.co.jp/company/cheer_player/">北海道日本ファムファイターズ</a></th>
+<td>北海道日本ハムファターズの公式サイトです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="https://www.buffaloes.co.jp/team/playerssong.html">オリックスバファローズ</a></th>
+<td>オリックスバファローズの公式サイトです。</td>
+</tr>
+<tr>
+	<th><a href="https://sp.softbankhawks.co.jp/team/song/index.html">福岡ソフトバンクホークス</a></th>
+	<td>福岡ソフトバンクホークスの公式サイトです。</td>
+</tr>
+<tr>
+	<th><a href="https://sp.softbankhawks.co.jp/team/song/index.html">福岡ソフトバンクホークス</a></th>
+	<td>福岡ソフトバンクホークスの公式サイトです。</td>
+</tr>
+<tr>
+	<th><a href="http://wakajishi-seibulions.com">若獅子会</a></th>
+	<td>埼玉西武ライオンズ応援団のホームページです。</td>
+</tr>
+<tr>
+	<th><a href="https://www.marines.co.jp/team/supportersong/index.html">千葉ロッテマリーンズ</a></th>
+	<td>千葉ロッテマリーンズの公式サイトです。</td>
 </tr>
 </table>
 
@@ -119,12 +135,12 @@
 	<nav>
 	<h2>パ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="#">西武</a></li>
-	<li><a href="#">ソフトバンク</a></li>
-	<li><a href="#">楽天</a></li>
-	<li><a href="#">ロッテ</a></li>
-	<li><a href="#">日本ハム</a></li>
-	<li><a href="#">オリックス</a></li>
+	<li><a href="lions.html">西武</a></li>
+	<li><a href="hawks.html">ソフトバンク</a></li>
+	<li><a href="eagles.html">楽天</a></li>
+	<li><a href="marines.html">ロッテ</a></li>
+	<li><a href="fighters.html">日本ハム</a></li>
+	<li><a href="buffaloes.html">オリックス</a></li>
 	</ul>
 </nav>
 
@@ -216,7 +232,7 @@
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright&copy; <a href="index.html">SAMPLE COMPANY</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
