--- a/pdfmr/static/templates2/lions.html
+++ b/pdfmr/static/templates2/lions.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>埼玉西武ライオンズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,179 +50,99 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="lio">埼玉西武ライオンズ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
-</tr>
-<tr>
 	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
+	<th class="p_name">栗山巧</th>
+	<td>勝利に向かって 進め今こそ 生み出せチャンスを いざ栗山</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
-	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
+	<th class="p_name">岡田雅利</th>
 	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
+		魅せろ岡田 打ちまくれプライドかけて熱くなれ 敵を蹴散らせ 薙ぎ倒せ度胸魅せろ岡田<br>
 	</td>
 </tr>
 <tr>
-	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
+	<th class="p_num">3</th>
+	<th class="p_name">山川穂高</th>
+	<td>山川穂高ここで一発 高らかにアーチ描こうぜ 皆の願いバットにのせて 飛ばせ遥か彼方まで
 	</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">外崎修汰</th>
+	<td>
+		駆け上がれ 夢の舞台へ 無我夢中に 走れ早く みてみたいな 夢中になれる君 いくぞ前進 その先へと
+	</td>
 </tr>
 <tr>
-	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_num">6</th>
+	<th class="p_name">源田壮亮</th>
+	<td>【前奏：この場所で 輝け 魅せろ壮亮】<br>
+		泥にまみれて 培った 今ここで魅せろ 源田の力<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">7</th>
+	<th class="p_name">金子侑司</th>
+	<td>ラーラララー ラーラララーラー ラーラララー ラーララー<br>
+		走れ金子 さあ一歩踏み出して その瞬間を掴め</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">木村文紀</th>
+	<td>心に秘めた想いを フルスイングでぶちかませ 継続は力になるから 自分を信じて突っ走れ</td>
 </tr>
 <tr>
 	<th class="p_num">10</th>
+	<th class="p_name">森友哉</th>
+	<td>無限に昇る 華を此処で咲かせろ 日本を背負う侍 戦いの時だ</td>
+</tr>
+<tr>
+	<th class="p_num">32</th>
 	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<td>バットに込めた気持ち 打ち放てよ その願いは大空へ 永江恭平</td>
 </tr>
 <tr>
-	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_num">58</th>
+	<th class="p_name">熊代聖人</th>
+	<td>速球貫け 打て進め ギアを上げて 加速しろ 魅せろ熊代</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
-</tr>
-<tr>
-	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
-</tr>
-<tr>
-	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
-</tr>
-<tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
-</tr>
-<tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
-</tr>
-<tr>
-	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
-</tr>
-<tr>
-	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
-</tr>
-<tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">60</th>
+	<th class="p_name">中村剛也</th>
+	<td>その胸を焦がす 炎のままに 気迫で打ち抜くんだ バックスクリーン</td>
 </tr>
 <tr>
 	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_name">メヒア</th>
+	<td>エルネストメヒア ホームランキング ララララララー<br>
+		エルネストメヒア ホームランキング ララララララー<br>
+		エルネストメヒア ラーラーララーラーラ エルネストメヒア ララララー<br>
+		エルネストメヒア ラーラーララーラーラ エルネストメヒア ララララー</td>
+</tr>
+
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">野手汎用A</th>
+	<td>夢を見た この世界で 勝利の雄叫び上げろ 若獅子の力を 見せてくれ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_name">野手汎用B</th>
+	<td>流した汗はすべて 努力の結晶だ がむしゃらに掴めチャンス いけ! ○○!</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_name">投手汎用</th>
+	<td>気持ちと技で 真っ向勝負 敵を倒し我らを 勝利へ導け</td>
 </tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
-</tr>
+
 </table>
 
 </section>
