--- a/pdfmr/static/templates2/marines.html
+++ b/pdfmr/static/templates2/marines.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>千葉ロッテマリーンズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,178 +50,131 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="mar">千葉ロッテマリーンズ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
 	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
+	<th class="p_name">荻野貴司</th>
+	<td>ラララ… 駆け抜けろホームまで 荻野貴司<br>
+		オイ! オイ! オイ! オイ! オイ! オイ! 打て荻野貴司!<br>
+		ラララ… 駆け抜けろホームまで 荻野貴司</td>
 </tr>
 <tr>
 	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
+	<th class="p_name">清田育宏</th>
 	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
+		Go! 清田清田 全力で飛ばせ Go! 清田清田 全力で走れ ラララ… 今こそ清田育宏 大空高く<br>
 	</td>
-</tr>
-<tr>
-	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
 </tr>
 <tr>
 	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
-	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
-	</td>
+	<th class="p_name">角中勝也</th>
+	<td>ララララ角中 ララララ角中 さあ戦え 角中 勝利へ導け 栄光の時を目指して</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
+	<th class="p_name">藤岡裕大</th>
+	<td>
+		ラララ… 行け 藤岡裕大 夢見たその先へ 勝利を呼ぶ一打 今放て
 	</td>
 </tr>
 <tr>
-	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
-</tr>
-<tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
-</tr>
-<tr>
-	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">中村奨吾</th>
+	<td>【前奏：奨吾 奨吾 中村奨吾 熱く燃えろよ 奨吾】<br>
+		奨吾 奨吾 中村奨吾 魂込めた一打を魅せろオオ 奨吾 奨吾 中村奨吾 熱く燃えろよ 奨吾<br>
+	</td>
 </tr>
 <tr>
 	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_name">加藤翔平</th>
+	<td>駆け抜けろ強く勝利を目指して 光を放つ 君の勇姿 加藤翔平 加藤翔平 飛びたて翔平 彼方まで</td>
 </tr>
 <tr>
-	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_num">13</th>
+	<th class="p_name">平沢大河</th>
+	<td>ラララ… 平沢大河 今日も俺達に勝利運べよ<br>
+		ラララ… 平沢大河 今日も俺達に勝利運べよ<br>
+		オイ! オイ! オイ! オイ! オイ! 飛ばせ平沢大河!<br>
+		</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_num">22</th>
+	<th class="p_name">田村龍弘</th>
+	<td>[1]ラララ… さぁ魅せろ男田村 ラララ…さぁ燃えろ男田村<br>
+		[2](歌詞無し)</td>
 </tr>
 <tr>
-	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<th class="p_num">25</th>
+	<th class="p_name">三木亮</th>
+	<td>オイ! 三木亮 未来へ続く扉 今開けろ</td>
 </tr>
 <tr>
-	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
-</tr>
-<tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
+	<th class="p_num">25</th>
+	<th class="p_name">岡大海</th>
+	<td>オイ! 岡大海! 勝利を掴め</td>
 </tr>
 <tr>
 	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_name">吉田裕太</th>
+	<td>ララララ吉田 ララララ吉田 ホームを守るんだ ララララ吉田 ララララ吉田 さあここで打て</td>
 </tr>
 <tr>
 	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_name">井上晴哉</th>
+	<td>ラララ井上晴哉 ラララホームラン井上晴哉 打てよ今ここで ラララ…井上晴哉</td>
 </tr>
 <tr>
-	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_num">53</th>
+	<th class="p_name">江村直也</th>
+	<td>オイ! オイ! オイ! 闘魂たぎらせ 燃えろよ江村</td>
 </tr>
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">54</th>
+	<th class="p_name">レアード</th>
+	<td>オイ! オイ! オイ!<br>
+		レッツゴー レアード オーオオー<br>
+		レッツゴー レアード オーオオー</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">59</th>
+	<th class="p_name">細谷圭</th>
+	<td>oh yeah 細谷圭 細谷圭 oh-oh<br>
+		oh yeah 細谷圭 細谷圭 oh-oh</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_num">79</th>
+	<th class="p_name">マーティン</th>
+	<td>バモス マーティン ラララララ<br>
+		レオネス マーティン ララララ</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_num">127</th>
+	<th class="p_name">高濱卓也</th>
+	<td>ラーララララ高濱! ラーララララ高濱! 湧き上がるその闘志 今だ解き放て高濱</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<th class="p_name">若手汎用</th>
+	<td>汗をかいて 涙を流し くじけずに頑張ってみろよ そしたらあしたへの答えが見えてくるだろう</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<th class="p_name">野手汎用</th>
+	<td>信じるその道 突き進めよ 情熱無限 豪打無敵 さぁ立ち向かえ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
+	<th class="p_name">捕手汎用</th>
+	<td>オイ! 行け行け○○ オイ! そーれ!</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+	<th class="p_name">投手汎用</th>
+	<td>○○! ○○! 驚きの一撃で ヒーロー独り占め</td>
 </tr>
 </table>
 
