--- a/pdfmr/static/templates2/index.html
+++ b/pdfmr/static/templates2/index.html
@@ -34,8 +34,8 @@
 <!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+<li><a href="link.html">リンク<span>LINK</span></a></li>
+<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
 </ul>
 </nav>
 <!--小さな端末用（800px以下端末）メニュー-->
@@ -45,8 +45,8 @@
 <!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+<li><a href="link.html">リンク<span>LINK</span></a></li>
+<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
 </ul>
 </nav>
 
@@ -68,8 +68,10 @@
 <section id="new">
 <h2>更新情報・お知らせ</h2>
 <dl>
+	<dt>2019/3/2</dt>
+	<dd>全球団応援歌歌詞の投稿完了。<span class="newicon">NEW</span></dd>
 	<dt>2019/2/16</dt>
-	<dd>ホームページ作成開始。<span class="newicon">NEW</span></dd>
+	<dd>ホームページ作成開始。</dd>
 </dl>
 <p class="r">»&nbsp;<a href="#">過去ログ</a></p>
 </section>
@@ -97,12 +99,12 @@
 	<nav>
 	<h2>パ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="#">西武</a></li>
-	<li><a href="#">ソフトバンク</a></li>
-	<li><a href="#">楽天</a></li>
-	<li><a href="#">ロッテ</a></li>
-	<li><a href="#">日本ハム</a></li>
-	<li><a href="#">オリックス</a></li>
+	<li><a href="lions.html">西武</a></li>
+	<li><a href="hawks.html">ソフトバンク</a></li>
+	<li><a href="eagles.html">楽天</a></li>
+	<li><a href="marines.html">ロッテ</a></li>
+	<li><a href="fighters.html">日本ハム</a></li>
+	<li><a href="buffaloes.html">オリックス</a></li>
 	</ul>
 </nav>
 
@@ -201,7 +203,7 @@
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright© <a href="index.html">SAMPLE COMPANY</a> All Rights Reserved.</small>
+<small>Copyright© <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
